<resources>
    <string name="app_name">saboapp</string>
    <string name="menu_settings">Menu Settings</string>
    <string name="menu_logout">Menu Logout</string>
    <string name="fab_add">fab_add</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="dark_mode">dark mode</string>
    <string name="profile">Profile</string>
    <string name="profile_photo_description">Profile Photo</string>
    <string name="sign_in_admin">Sign In</string>
    <string name="welcome_back_admin_you_have_been_missed">Welcome back ADMIN, You Have Been Missed!</string>
    <string name="tv_sign_in_admin">Sign In</string>
    <string name="tv_sign_up_admin">Sign Up</string>
    <string name="email_admin">email</string>
    <string name="password_admin">Password</string>
    <string name="welcome_to_sabo_smart_border_security_app">Welcome  to SABO Smart Border Security App</string>
    <string name="button_admin">Administartor</string>
    <string name="or">or</string>
    <string name="button_user">I\'m a User</string>
    <string name="camera_1">Camera 1</string>
    <string name="location">Location :</string>
    <string name="ip">IP :</string>
    <string name="protocol">Protocol :</string>
    <string name="remark">Remark :</string>
    <string name="used">Used :</string>
    <string name="latitude_longitude">latitude, longituted</string>
    <string name="remark1">Dekat hutan</string>
    <string name="Uses">Used</string>
    <string name="watch">WATCH</string>
    <string name="delete">DELETE</string>
    <string name="coordinate">Coordinate :</string>
    <string name="cameraname">Camera Name</string>
    <string name="logo">logo sabo</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_notifications">Notifications</string>
    <string name="list_camera">List Camera :</string>
    <string name="be_sure_of_your_safety">Be sure of Your Safety</string>
    <string name="hi_sabo">Hi, Sabo!</string>
    <string name="camera">Camera</string>
    <string name="menu_notification">Menu Notification</string>
</resources>