<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kamiki.saboapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.kamiki.saboapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.kamiki.saboapp.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kamiki.saboapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/addCameraFragment"
        android:name="com.kamiki.saboapp.ui.addcamera.AddCameraFragment"
        android:label="fragment_add_camera"
        tools:layout="@layout/fragment_add_camera" />
    <activity
        android:id="@+id/detailActivity"
        android:name="com.kamiki.saboapp.ui.DetailActivity"
        android:label="activity_detail2"
        tools:layout="@layout/activity_detail2" />
    <activity
        android:id="@+id/loginActivity2"
        android:name="com.kamiki.saboapp.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/registerActivity"
        android:name="com.kamiki.saboapp.RegisterActivity"
        android:label="activity_register"
        tools:layout="@layout/activity_register" />
    <activity
        android:id="@+id/splashScreen"
        android:name="com.kamiki.saboapp.SplashScreen"
        android:label="activity_splash_screen"
        tools:layout="@layout/activity_splash_screen" />
    <activity
        android:id="@+id/welcomeActivity"
        android:name="com.kamiki.saboapp.WelcomeActivity"
        android:label="activity_welcome"
        tools:layout="@layout/activity_welcome" />
</navigation>