<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:src="@drawable/amic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="282dp"
        android:layout_height="67dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="44dp"
        android:text="@string/welcome_to_sabo_smart_border_security_app"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/iv_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:layout_width="674dp"
        android:layout_height="370dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/path"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcome"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <Button
        android:id="@+id/btn_user"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:backgroundTint="#477ECF"
        android:text="@string/button_user"
        app:layout_constraintBottom_toTopOf="@+id/btn_admin"
        app:layout_constraintEnd_toEndOf="@+id/iv_welcome"
        app:layout_constraintStart_toStartOf="@+id/iv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcome"
        app:layout_constraintVertical_bias="0.732" />

    <Button
        android:id="@+id/btn_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#477ECF"
        android:text="@string/button_admin"
        android:textColor="#AFAFAF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_user"
        app:layout_constraintStart_toStartOf="@+id/btn_user"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:strokeColor="#B1B1B1"
        app:strokeWidth="1sp" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_admin"
        app:layout_constraintEnd_toEndOf="@+id/btn_user"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/btn_admin"
        app:layout_constraintTop_toBottomOf="@+id/btn_user" />

</androidx.constraintlayout.widget.ConstraintLayout>