<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="344dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:text="@string/dark_mode"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_camera"
        app:layout_constraintVertical_bias="0.023" />


    <TextView
        android:id="@+id/profile_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/detail_akun"
        android:layout_width="345dp"
        android:layout_height="85dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_setting">
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_avatar_poto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/abu_abu"
        android:contentDescription="@string/profile_photo_description"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/detail_akun"
        app:layout_constraintStart_toStartOf="@+id/detail_akun"
        app:layout_constraintTop_toTopOf="@+id/detail_akun"
        tools:ignore="DuplicateClickableBoundsCheck">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:transitionName="name"
        app:layout_constraintStart_toEndOf="@+id/profile_avatar_poto"
        app:layout_constraintTop_toTopOf="@+id/profile_avatar_poto"
        tools:text="Nama">
    </TextView>

    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintBottom_toBottomOf="@+id/profile_avatar_poto"
        app:layout_constraintStart_toEndOf="@+id/profile_avatar_poto"
        tools:text="Email">
    </TextView>

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparan"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/detail_akun"
        app:layout_constraintEnd_toEndOf="@+id/detail_akun"
        app:layout_constraintTop_toTopOf="@+id/detail_akun"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="TODO">
    </ImageButton>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/change_camera"
        android:layout_width="345dp"
        android:layout_height="55dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/background_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_akun">
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/profile_photo_description"
        app:fabSize="normal"
        android:backgroundTint="@color/abu_abu"
        app:layout_constraintBottom_toBottomOf="@+id/detail_akun"
        app:layout_constraintStart_toStartOf="@+id/detail_akun"
        app:layout_constraintTop_toTopOf="@+id/detail_akun">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</androidx.constraintlayout.widget.ConstraintLayout>